--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "timemanagement-api",
   "version": "1.0.0",
   "description": "Node.js/Express.js backend for timemanagement-react",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
