--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   ],
   "license": "ISC",
   "dependencies": {
+    "@awaitjs/express": "^0.6.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "express-async-handler": "^1.1.4"
+    "helmet": "^3.22.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
