--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "no-undef": "error",
     "no-shadow": "error",
     "quotes": ["error", "double", { "allowTemplateLiterals": true }],
-    "no-unused-vars": ["error", { "args": "after-used" }]
+    "no-unused-vars": ["error", { "args": "after-used" }],
+    "camelcase": "off"
   }
 }
