chore: add @hapi/joi object validation library

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@awaitjs/express": "^0.6.0",
+    "@hapi/joi": "^17.1.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.22.0"
