--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@hapi/joi": "^17.1.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
-    "helmet": "^3.22.0"
+    "helmet": "^3.22.0",
+    "uuid": "^8.0.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
