--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
   "dependencies": {
     "@awaitjs/express": "^0.6.0",
     "@hapi/joi": "^17.1.1",
+    "bcrypt": "^4.0.1",
+    "date-fns": "^2.13.0",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
+    "mongoist": "^2.5.2",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
