--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js/Express.js backend for timemanagement-react",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,6 +31,13 @@
   "devDependencies": {
     "eslint": "^7.0.0",
     "eslint-config-mourner": "^3.0.0",
-    "eslint-config-prettier": "^6.11.0"
+    "eslint-config-prettier": "^6.11.0",
+    "jest": "^26.0.1"
+  }, 
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
